# aoroza

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: folder-picker-copy.md  plan.md  project-docs.md
scripts/: generate_icons.py
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: default_theme.css
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/command-palette/: CommandPalette.tsx  QuickOpen.tsx  RecentFiles.tsx
src/components/editor/: BlockMathEditor.tsx  CodeBlockView.tsx  Editor.tsx  EditorWidthHandle.tsx  LinkEditor.tsx  MathExtensions.ts  Outline.tsx  SearchToolbar.tsx  SlashCommandList.tsx  SuggestionList.tsx  Wikilink.ts  WikilinkSuggestion.tsx  WikilinkSuggestionList.tsx
src/components/icons/: index.tsx
src/components/layout/: FolderPicker.tsx  Footer.tsx  Sidebar.tsx
src/components/notes/: FolderNameDialog.tsx  FolderTreeView.tsx  NoteList.tsx
src/components/preview/: PreviewApp.tsx
src/components/settings/: AboutSettingsSection.tsx  EditorSettingsSection.tsx  GeneralSettingsSection.tsx  SettingsPage.tsx  ShortcutsSettingsSection.tsx
src/components/ui/: AlertDialog.tsx  Button.tsx  CodeCopyButton.tsx  ColorPicker.tsx  Select.tsx  Tooltip.tsx  index.tsx
src/context/: NotesContext.tsx  ThemeContext.tsx
src/lib/: folderTree.ts  platform.ts  utils.ts
src/services/: app.ts  notes.ts  pdf.ts
src/types/: note.ts
